--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/ahmad/.netbeans/7.1/build.properties
+user.properties.file=/home/waleed/.netbeans/7.1.2/build.properties
